--- a/02-multi-play.yaml
+++ b/02-multi-play.yaml
@@ -2,5 +2,5 @@
   hosts: web
   tasks:
   - name: PLAY-01 TASK-01
-    ansible.builtin.ping:
-     msg: "this one PLAY-01 and TASK-01"
+    ansible.builtin.debug:
+      msg: "this one PLAY-01 and TASK-01"
