--- a/02-multi-play.yaml
+++ b/02-multi-play.yaml
@@ -4,3 +4,10 @@
   - name: PLAY-01 TASK-01
     ansible.builtin.debug:
       msg: "this one PLAY-01 and TASK-01"
+      
+- name: PLAY-02
+  hosts: web
+  tasks:
+   - name: PLAY-02 TASK-02
+     ansible.builtin.debug:
+       msg: "this is PLAY-02 and TASK=02"
