--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -5,4 +5,4 @@
   - name: install nginx  
     ansible.builtin.package:  #heterogeneous module that can work for all distbuters
       name: nginx
-      state: prsent
+      state: present
