--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -6,3 +6,9 @@
     ansible.builtin.package:  #heterogeneous module that can work for all distbuters
       name: nginx
       state: present
+
+- name: run nginx
+  ansible.builtin.service:
+    name: nginx
+    state: started
+    enable: yes
