--- a/04-variables.yaml
+++ b/04-variables.yaml
@@ -1,8 +1,8 @@
 - name: varaibles to print
   hosts: web
   vars:
-    COURSE: "dEVOPS with aws"
-    DURATION: "120 hrs"
+    COURSE: "DEVOPS with aws"
+    DURATION: "120 Hrs"
     TRAINER: "SIVA KUMAR REDDY"
   tasks:
   - name: print the information
