--- a/05-task-vars.yaml
+++ b/05-task-vars.yaml
@@ -10,7 +10,7 @@
       msg: "Hi, i am learning {{COURSE}},duration is: {{DURATION}},Trainer : {{TRAINER}}"
     
   - name: print the information again
-    vars: # task level variables
+    vars: # task level variables override play level
       COURSE: "ansible"
     ansible.builtin.debug:
       msg: "Hi, i am learning {{COURSE}},duration is: {{DURATION}},Trainer : {{TRAINER}}"  
