--- a/07-vars-prompt.yaml
+++ b/07-vars-prompt.yaml
@@ -3,10 +3,13 @@
   vars_prompt:
   - name: COURSE
     prompt: Please enter the course name
+    private false: # not confidential
   - name: TRAINER
     prompt: Please enter the Trainer name
+    private false: # not confidential
   - name: DURATION
     prompt: Please enter the course duration
+    private false: # not confidential
   tasks:
   - name: print thecourse information
     ansible.builtin.debug:
