--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,28 @@
+192.168.1.1
+192.168.1.2
+192.168.1.3
+
+
+
 [web]
-172.31.24.54
+34.229.132.71
 
 [web:vars]
 COURSE="Ansible from inventory"
 DURATION="10HRS"
 TRAINER="Sivakumar reddy"
+
+
+[backend]
+192.168.1.4
+192.168.1.5
+192.168.1.6
+
+[mysql]
+192.168.1.7
+192.168.1.8
+192.168.1.9
+
+[servers:children]
+web
+backend
