--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,7 @@
 
 
 [web]
-34.229.132.71
+44.220.63.37
 
 [web:vars]
 COURSE="Ansible from inventory"
@@ -26,3 +26,7 @@ TRAINER="Sivakumar reddy"
 [servers:children]
 web
 backend
+
+[aii:vars]
+Ansible_user=ec2-user
+Ansible_password=DevOps321
