--- a/11-data-types.yaml
+++ b/11-data-types.yaml
@@ -1,6 +1,6 @@
 - name: devops course information
   hosts: local
-  connection: local # local
+  connection: local # localhost
   vars:
     course: "DevOps with AWS"  #string
     duration: 120 #number
@@ -24,4 +24,4 @@
     ansible.builtin.debug:
       msg: "HI, I am learning{{ course}}, with duration: {{ duration }}, topics are {{ topics }},and live: {{ live }}, tools are {{ tools }}"
         
-        
+         
