--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -3,17 +3,17 @@
   connection: local
   vars_prompt:
     - name: my_number
-      prompt: please enter the course number
+      prompt: please enter the number
       private: false # not confidential
     tasks:
     - name: print this if less than 10
       ansible.builtin.debug:
-        msg: "Given number {{ number }} is less 10"
+        msg: "Given number {{ my_number }} is less then 10"
       when: {{ my_number }} | int < 10 # conditional expression
 
       - name: print this if greater than or equal to 10
         ansible.builtin.debug:
-          msg: "Given number {{ number }} is greater than or equal to 10"
+          msg: "Given number {{ my_number }} is greater than or equal to 10"
         when: {{ my_number }} | int >= 10  
 
   
