--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -5,6 +5,7 @@
   - name: create a user exist or not
     ansible.builtin.command: id expense
     register: USER #here USER is a varaibl that gets output from above command 
+    ignore_errors: yes
 
   - name: print the user imformation
     ansible.builtin.user:
