--- a/15-install-nginx.yaml
+++ b/15-install-nginx.yaml
@@ -1,8 +1,8 @@
 - name: install nginx
-  hosts: web
   become: yes
+  hosts: web
   tasks:
-  - name: print the state of nginx
+  - name: print the state
     ansible.builtin.debug:
       msg: "{{ ansible_facts }}"
      
@@ -17,4 +17,4 @@
   ansible.builtin.opt:
     name: nginx
     state: present
-  when: ansible_os_family == "RedHat"     
+  when: ansible_os_family == "Debian"     
