--- a/15-install-nginx.yaml
+++ b/15-install-nginx.yaml
@@ -7,7 +7,7 @@
       msg: "{{ ansible_facts }}"
      
 
-- name: install nginx if redhat
+- name: install nginx if RedHat
   ansible.builtin.dnf:
     name: nginx
     state: present
