--- a/15-install-nginx.yaml
+++ b/15-install-nginx.yaml
@@ -7,14 +7,14 @@
       msg: "{{ ansible_facts }}"
      
 
-- name: install nginx if RedHat
-  ansible.builtin.dnf:
+  - name: install nginx if RedHat
+    ansible.builtin.dnf:
     name: nginx
     state: present
-  when: ansible_os_family == "RedHat" 
+    when: ansible_os_family == "RedHat" 
 
-- name: install nginx if dbbian
-  ansible.builtin.opt:
+  - name: install nginx if Debian
+    ansible.builtin.opt:
     name: nginx
     state: present
-  when: ansible_os_family == "Debian"     
+    when: ansible_os_family == "Debian"     
