--- a/15-install-nginx.yaml
+++ b/15-install-nginx.yaml
@@ -2,19 +2,18 @@
   become: yes
   hosts: web
   tasks:
-  - name: print the state
+  - name: print the stats
     ansible.builtin.debug:
       msg: "{{ ansible_facts }}"
-     
-
-  - name: install nginx if RedHat
+  
+  - name: install nginx if redhat
     ansible.builtin.dnf:
-    name: nginx
-    state: present
-    when: ansible_os_family == "RedHat" 
+      name: nginx
+      state: present
+    when: ansible_os_family == "RedHat"
 
   - name: install nginx if Debian
-    ansible.builtin.opt:
-    name: nginx
-    state: present
-    when: ansible_os_family == "Debian"     
+    ansible.builtin.apt:
+      name: nginx
+      state: present
+    when: ansible_os_family == "Debian"
