--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -5,3 +5,16 @@
   - name: print the default variable
     ansible.builtin.debug:
       msg: "Hello {{ course | default('Ansible') }}"
+
+- name: convert to upper-case
+  vars:
+    gathering: "Hello Ramesh"
+  ansible.builtin.debug:
+      msg: " {{ greeting | upper }}"
+
+- name: convert to lower-case
+  vars:
+    gathering: "Hello Ramesh"
+  ansible.builtin.debug:
+      msg: " {{ greeting | lower }}"
+    
