--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -8,13 +8,13 @@
 
   - name: convert to upper-case
     vars:
-      gathering: "Hello Ramesh"
+      greeting: "Hello Ramesh"
     ansible.builtin.debug:
       msg: " {{ greeting | upper }}"
 
   - name: convert to lower-case
     vars:
-    gathering: "Hello Ramesh"
+    greeting: "Hello Ramesh"
     ansible.builtin.debug:
       msg: " {{ greeting | lower }}"
     
