--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -22,4 +22,4 @@
     vars:
       my_list: [10,20,30,10,25,40,50,60,40]
     ansible.builtin.debug:
-      msg: " {{ number | uniq}} "
+      msg: " {{ number | unique }} "
