--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -5,27 +5,36 @@
   - name: print the default variable
     ansible.builtin.debug:
       msg: "Hello {{ course | default('Ansible') }}"
-
-  - name: convert to upper-case
+  
+  - name: convert to uppercase
     vars:
       greeting: "Hello Ramesh"
     ansible.builtin.debug:
       msg: " {{ greeting | upper }}"
 
-  - name: convert to lower-case
+  - name: convert to lowercase
     vars:
       greeting: "Hello Ramesh"
     ansible.builtin.debug:
       msg: " {{ greeting | lower }}"
-    
-  - name: get the uniq values
+  
+  - name: get the unique values
     vars:
-      numbers: [10,20,30,10,25,40,50,60,40]
+      numbers: [1,2,3,45,4,3,2]
     ansible.builtin.debug:
-      msg: " {{ number | unique }} "
+      msg: " {{ numbers | unique }}"
 
   - name: get the min and max
     vars:
-      numbers: [10,20,30,10,25,40,50,60,40]
+      numbers: [1,2,3,45,4,3,2]
     ansible.builtin.debug:
-      msg: " Min: {{ numbers | min }}, Max: {{ numbers | max }} "    
+      msg: " Min: {{ numbers | min }}, Max: {{ numbers | max }}"
+
+  - name: convert map to list
+    vars:
+      course:
+        name: "DevOps with AWS"
+        duration: 120
+        trainer: "sivakumar reddy"
+    ansible.builtin.debug:
+      msg: "{{ course | dict2items }}"
