--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -9,6 +9,7 @@
     - mysql
     - backend
     - frontend
+    zone: veerabab.online
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
@@ -23,4 +24,16 @@
   - name: print the output
     ansible.builtin.debug:
       msg:  "{{ ec2_instances }}"
+
+  - nmae: create r53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"  # mysql.veerabab.online
+      record: "{{ item.item }}.{{ zone }}"  # replace with your domain name
+      type: A
+      ttl: 1
+      value: "{{ item.instance[0].private_ip_address }}"
+      wait: true
+      overwrite: true
+    loop: "{{ ec2_instances.results }}"
        
