--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -25,7 +25,7 @@
     ansible.builtin.debug:
       msg:  "{{ ec2_instances }}"
 
-  - nmae: create r53 records
+  - name: create r53 records
     amazon.aws.route53:
       state: present
       zone: "{{ zone }}"  # mysql.veerabab.online
