--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -39,7 +39,7 @@
     loop: "{{ ec2_instances.results }}"
 
   # public IP R53
-  
+
   - name: create r53 record for frontend
     amazon.aws.route53:
       state: present
@@ -51,6 +51,6 @@
       wait: true
       overwrite: true
     loop: "{{ ec2_instances.results }}"
-    when: ec2_instance.results.item == "frontend"
+    when: item.item == "frontend"
 
        
